[package]
name = "web3-auth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["rustls", "abigen"] }
tokio = { version = "1.21.2", features = ["full"]}
